--- a/index.css
+++ b/index.css
@@ -22,3 +22,9 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
